--- a/app/src/main/res/layout-land/activity_now_playing.xml
+++ b/app/src/main/res/layout-land/activity_now_playing.xml
@@ -13,6 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
 
+    <TextView
+        android:text="@string/now_playing_purpose"
+        style="@style/PurposeText" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +27,7 @@
             android:id="@+id/circular_cover"
             android:layout_width="@dimen/circularDimen_land"
             android:layout_height="@dimen/circularDimen_land"
-            android:layout_margin="@dimen/bigPadding"
+            android:layout_margin="@dimen/mediumPadding"
             app:border_color="@color/hintLightText"
             app:border_width="@dimen/circularBorder"
             app:centercircle_diammterer="1"
