--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -12,6 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
 
+    <TextView
+        android:text="@string/discover_purpose"
+        style="@style/PurposeText" />
+
     <ImageView
         tools:ignore="ContentDescription"
         android:src="@drawable/fishing"
