--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,9 @@
         android:layout_margin="@dimen/smallPadding"
         android:src="@drawable/ic_add_white_24dp" />
 
+    <TextView
+        android:text="@string/playlists_purpose"
+        android:layout_below="@id/playlists_recycler_view"
+        style="@style/PurposeText" />
+
 </RelativeLayout>
